--- a/app/assets/stylesheets/nav.less
+++ b/app/assets/stylesheets/nav.less
@@ -7,10 +7,13 @@
 }
 
 #brand-logo {
-  height: 30px;
-  margin-top: -7px;
+  height: 50px;
+  margin-top: -15px;
   margin-right: 10px;
-  margin-left: 10px;
+  margin-left: -5px;
+}
+.navbar-default:not(.navbar-transparent) {
+  border-bottom: 0;
 }
 
 .navbar-brand {
@@ -31,6 +34,10 @@
     height:32px;
     margin-top:-9px;
   }
+}
+
+#main-nav {
+  margin: 30px 0;
 }
 
 #menu-title {
@@ -62,7 +69,7 @@
 
 .navbar {
   margin-bottom: 0;
-  background: rgba(0,0,0,0.02);
+  background: white;
   border: 0;
   border-radius: 0;
 }
