--- a/app/assets/stylesheets/profile.less
+++ b/app/assets/stylesheets/profile.less
@@ -3,16 +3,20 @@ html {
     min-height: 100%;
 }
 body {
-    margin: 0 0 100px; /* bottom = footer height */
+    margin: 0 0 70px; /* bottom = footer height */
 }
 footer {
     position: absolute;
     left: 0;
     bottom: 0;
-    height: 100px;
+    height: 70px;
     width: 100%;
 }
 
 #profile-container {
 	padding-bottom: 40px;
+}
+
+.page-header {
+	border: 0;
 }
