--- a/app/public/account.jade
+++ b/app/public/account.jade
@@ -14,7 +14,7 @@ head
     window.prefetch =!{JSON.stringify(docs)};
 
   body
-    include profileheader
+    include nav
     .container.pad-top
       .col-sm-6.col-sm-offset-3
         br
