--- a/app/public/errors/missingDocument.jade
+++ b/app/public/errors/missingDocument.jade
@@ -8,6 +8,7 @@ head
     base(href='/')
   html
     body(style='text-align: center; font-size: 24px;font-family:helvetica, sans-serif;')
+      include nav-logged-in
       br
       h1 404 Whoops
       br
