--- a/app/public/graph.jade
+++ b/app/public/graph.jade
@@ -26,6 +26,6 @@ html(lang="en")
       window.user =!{JSON.stringify(user)};
 
   body
-    include header
+    include graph-nav
     #main-container
       block content
