--- a/app/public/signup.jade
+++ b/app/public/signup.jade
@@ -10,7 +10,7 @@ html
     link(href='/assets/stylesheets/nav.css', rel='stylesheet')    
     base(href="/")
   body
-    include profileheader
+    include nav
     .container-fluid.pad-top
       .row
         .col-md-6.col-md-offset-3.col-xs-12
