--- a/app/public/graph-nav.jade
+++ b/app/public/graph-nav.jade
@@ -7,7 +7,7 @@ nav.navbar.navbar-default(role='navigation')
             span.icon-bar
             span.icon-bar
           a.navbar-brand(href='/')
-            img#brand-logo(src="/assets/images/logo-black.png")
+            img#brand-logo(src="/assets/images/brand-b.png")
           
         span.navbar-doc-title
           span.dropdown
