--- a/app/public/profile.jade
+++ b/app/public/profile.jade
@@ -15,7 +15,7 @@ head
     window.prefetch =!{JSON.stringify(docs)};
 
   body
-    include profileheader
+    include nav
     .container#profile-container
       .page-header.text-center
         h2
@@ -25,19 +25,19 @@ head
             | @#{user.local.name}
       if ownProfile
         .row
+          if privateDocs.length == 0 && publicDocs.length == 0
+            span
+              | You have no cographs. 
+              a(href="/new") Create a new cograph
           .col-sm-6
-            h3 Your Cographs
+            h3 Your Private Cographs
             .document-list
-              for doc in userDocs
+              for doc in privateDocs
                 a.list-group-item(href="/#{user.local.name}/document/#{doc.id}" target="_blank") #{doc.name}
-              if userDocs.length == 0
-                span
-                  | You have no cographs. 
-                  a(href="/new") Create a new cograph
           .col-sm-6
-            h3 All Cographs
+            h3 Your Published Cographs
             .document-list
-              for doc in docs
+              for doc in publicDocs
                 a.list-group-item(href="/#{doc.createdBy}/document/#{doc.id}" target="_blank")
                   | #{doc.name}
                   a.pull-right.text-muted.link-badge(href="/#{doc.createdBy}") by @#{doc.createdBy}
@@ -45,7 +45,7 @@ head
         .row
           .col-sm-12
             .document-list
-              for doc in userDocs
+              for doc in publicDocs
                 a.list-group-item(href="/#{user.local.name}/document/#{doc.id}" target="_blank")
                   | #{doc.name}
                   a.pull-right.text-muted.link-badge(href="/#{doc.createdBy}") by @#{doc.createdBy}
