--- a/app/public/account.jade
+++ b/app/public/account.jade
@@ -23,7 +23,7 @@ head
         if message && message.length > 0 
           .alert.alert-danger #{message}
 
-        form(action='/signup', method='post')
+        form(action='/account', method='post')
           .form-group
             label Email
             input.form-control(type='email', name='email' value='#{user.local.email}')
@@ -32,8 +32,11 @@ head
             input.form-control(type='text', name='name'  value='#{user.local.name}', disabled)
           .form-group
             label Old Password
-            input.form-control(type='password', name='password')
+            input.form-control(type='password', name='old-password')
           .form-group
             label New Password
-            input.form-control(type='password', name='password')
+            input.form-control(type='password', name='new-password')
+          .form-group
+            label New Password (repeat)
+            input.form-control(type='password', name='new-password-repeat')
           button.btn.btn-info.pull-right.btn-lg(type='submit') Save
