--- a/app/public/account.jade
+++ b/app/public/account.jade
@@ -39,3 +39,11 @@ head
             label New Password
             input.form-control(type='password', name='newPassword')
           button.btn.btn-info.pull-right.btn-lg(type='submit') Save
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-38168348-4', 'auto');
+      ga('send', 'pageview');
