--- a/app/public/forgotten-password.jade
+++ b/app/public/forgotten-password.jade
@@ -48,3 +48,11 @@ html
     script(src="neural/js/vendor/OrbitControls.js")
     script(src="neural/js/vendor/OBJLoader.js")
     script(src="neural/js/three-app.js")
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-38168348-4', 'auto');
+      ga('send', 'pageview');
