--- a/app/public/signup.jade
+++ b/app/public/signup.jade
@@ -44,4 +44,12 @@ html
           p
             a(href='/request-key') Request Beta Access
           p
-            a(href='/login') Already have an account? 
+            a(href='/login') Already have an account?
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-38168348-4', 'auto');
+      ga('send', 'pageview');
