fixes bug introduced by accounts in previous PR

--- a/app/public/account.jade
+++ b/app/public/account.jade
@@ -35,13 +35,13 @@ head
             input.form-control(type='text', name='name'  value='#{user.local.name}', disabled)
           .form-group
             label Old Password
-            input.form-control(type='password', name='old-password')
+            input.form-control(type='password', name='oldPassword')
           .form-group
             label New Password
-            input.form-control(type='password', name='new-password')
+            input.form-control(type='password', name='newPassword')
           .form-group
             label New Password (repeat)
-            input.form-control(type='password', name='new-password-repeat')
+            input.form-control(type='password', name='newPasswordRepeat')
           button.btn.btn-info.pull-right.btn-lg(type='submit') Save
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
