--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -574,6 +574,15 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   vertical-align: bottom;
 }
 
+#toolbar-bottom-right .btn {
+  background: white;
+  opacity: 1;
+}
+
+#toolbar-bottom-right .btn img {
+  opacity: 0.8;
+}
+
 #toolbar-bottom-right > .navbar-nav {
   vertical-align: bottom;
 }
