view only if not logged in

--- a/app/public/errors/missingDocument.jade
+++ b/app/public/errors/missingDocument.jade
@@ -8,10 +8,9 @@ head
     base(href='/')
   html
     body(style='text-align: center; font-size: 24px;font-family:helvetica, sans-serif;')
-      include nav-logged-in
       br
       h1 404 Whoops
       br
       div Sorry, the document you are trying to reach is unavailable!
       br
-      a(href='/landing') Return to Cograph
+      a(href='/') Return to Cograph
