--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -46,8 +46,8 @@ html(lang='en')
       .container
         h1 Make new connections
         p#button-container
-          a#create.btn.btn-primary.btn-lg.call-to-action(href="/new") Make a Graph
-          a#open.btn.btn-default.btn-lg.call-to-action(href="/profile") Explore Graphs
+          a#create.btn.btn-primary.btn-lg.call-to-action(href="/request-key") Make a Graph
+          a#open.btn.btn-default.btn-lg.call-to-action(href="/request-key") Explore Graphs
 
     .container.main-content
       .row
@@ -60,9 +60,9 @@ html(lang='en')
           h3.full-size
             strong Graphs are great for connected information.
           br
-          h3 Here are some popular Cographs
+          h3 Popular Cographs
           h3.full-size
-            strong embed here
+            strong Coming soon.
           br
       hr
       h3.header-titles What can I do with Cograph?
