--- a/app/public/graph.jade
+++ b/app/public/graph.jade
@@ -7,12 +7,15 @@ html(lang="en")
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name="description" content="Cograph lets you build and explore graphs together")
     meta(property="fb:app_id" content="315770905267996")
-    //link(href='/assets/stylesheets/main.css', rel='stylesheet')
-    //script(type='text/javascript', data-main="/main", src="/assets/libs/requirejs/require.js") //loads main.js
+    
+    // For Development
+    link(href='/assets/stylesheets/main.css', rel='stylesheet')
+    script(type='text/javascript', data-main="/main", src="/assets/libs/requirejs/require.js") //loads main.js
 
     // For production
-    link(href='/assets/stylesheets/main-built.css', rel='stylesheet')
-    script(type='text/javascript', data-main="/main-built", src="/assets/libs/requirejs/require.js")
+    //- link(href='/assets/stylesheets/main-built.css', rel='stylesheet')
+    //- script(type='text/javascript', data-main="/main-built", src="/assets/libs/requirejs/require.js")
+    
     script.
       window.prefetch = {};
       window.prefetch.nodes =!{JSON.stringify(nodes)};
