change index text

--- a/app/public/index-logged-in.jade
+++ b/app/public/index-logged-in.jade
@@ -28,9 +28,9 @@ html(lang='en')
           h3.full-size
             strong Cographs are webs of ideas that you can create, explore and publish.
           br
-          h3 Why should I use graphs?
+          h3 Why should I use cographs?
           h3.full-size
-            strong Graphs are great for connected information.
+            strong Cographs are great for connected information.
       hr
       h3.header-titles What can I do with Cograph?
       .row
@@ -53,28 +53,28 @@ html(lang='en')
             i.flaticon-teamwork
           h3 
             strong Collaborate
-          p Edit graphs in real time with others.
+          p Edit cographs in real time with others.
       .row
         .col-md-4.col-xs-12.benefit
           .benefit-ball
             i.flaticon-earth180
           h3 
             strong Explore
-          p Filter, search and tag your graphs or expand connections. 
+          p Filter, search and tag your cographs or expand connections. 
 
         .col-md-4.col-xs-12.benefit
           .benefit-ball
             i.flaticon-rating
           h3 
             strong Share
-          p Share graphs to your favorite social media and decide who can contribute to them
+          p Share cographs to your favorite social media and decide who can contribute to them
 
         .col-md-4.col-xs-12.benefit
           .benefit-ball
             i.flaticon-code26
           h3
             strong Embed
-          p Add graphs to your website or blog posts
+          p Add cographs to your website or blog posts
 
       h3.header-titles We're in Beta. Our Next Features are
       .row
@@ -90,7 +90,7 @@ html(lang='en')
             i.flaticon-cells1
           h3 
             strong Intergraph
-          p Connect between nodes across different graphs.
+          p Connect between nodes across different cographs.
 
         .col-md-4.col-xs-12.benefit
           .benefit-ball
