--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -46,8 +46,8 @@ html(lang='en')
       .container
         h1 Make new connections
         p#button-container
-          a#create.btn.btn-primary.btn-lg.call-to-action(href="/request-key") Make a Graph
-          a#open.btn.btn-default.btn-lg.call-to-action(href="/request-key") Explore Graphs
+          a#create.btn.btn-primary.btn-lg.call-to-action(href="/request-key") Make a Cograph
+          a#open.btn.btn-default.btn-lg.call-to-action(href="/request-key") Explore Cographs
 
     .container.main-content
       .row
@@ -56,9 +56,9 @@ html(lang='en')
           h3.full-size
             strong Cographs are webs of ideas that you can create, explore and publish.
           br
-          h3 Why should I use graphs?
+          h3 Why should I use cographs?
           h3.full-size
-            strong Graphs are great for connected information.
+            strong Cographs are great for connected information.
           br
           h3 Popular Cographs
           h3.full-size
@@ -86,7 +86,7 @@ html(lang='en')
             i.flaticon-teamwork
           h3 
             strong Collaborate
-          p Edit graphs in real time with others.
+          p Edit cographs in real time with others.
       .row
         .col-md-4.col-xs-12.benefit
           .benefit-ball
@@ -100,14 +100,14 @@ html(lang='en')
             i.flaticon-rating
           h3 
             strong Share
-          p Share graphs to your favorite social media and decide who can contribute to them
+          p Share cographs to your favorite social media and decide who can contribute to them
 
         .col-md-4.col-xs-12.benefit
           .benefit-ball
             i.flaticon-code26
           h3
             strong Embed
-          p Add graphs to your website or blog posts
+          p Add cographs to your website or blog posts
 
       h3.header-titles We're in Beta. Our Next Features are
       .row
@@ -123,7 +123,7 @@ html(lang='en')
             i.flaticon-cells1
           h3 
             strong Intergraph
-          p Connect between nodes across different graphs.
+          p Connect between nodes across different cographs.
 
         .col-md-4.col-xs-12.benefit
           .benefit-ball
