--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -58,7 +58,7 @@ html(lang='en')
           br
           h3 Why should I use cographs?
           h3.full-size
-            strong Cographs are great for connected information.
+            strong Cographs put information in context.
           br
           h3 Popular Cographs
           h3.full-size
@@ -72,14 +72,14 @@ html(lang='en')
             i.flaticon-idea13
           h3 
             strong Add
-          p Create and connect information across the web
+          p Add information from across the web
 
         .col-md-4.col-xs-12.benefit
           .benefit-ball
             i.flaticon-cell9
           h3 
             strong Connect
-          p Create connections between things and label connections
+          p Create annotated connections between things
 
         .col-md-4.col-xs-12.benefit
           .benefit-ball
@@ -116,7 +116,7 @@ html(lang='en')
             i.flaticon-rocket60
           h3 
             strong API
-          p Post and get data to cograph
+          p Post/get data with cograph
 
         .col-md-4.col-xs-12.benefit
           .benefit-ball
