--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -1,5 +1,5 @@
+@import "font";
 @import "colors";
-@import url(http://fonts.googleapis.com/css?family=Varela+Round);
 
 @node-color: white;
 @connection-color: black;
@@ -11,7 +11,7 @@
 @data-tooltip-color: rgba(0,31,63,0.8);
 @controls-z-index: 1;
 @max-z: 99999999;
-@font: 'Varela Round', Helvetica, sans-serif;
+@font: 'Gotham Light', Helvetica, sans-serif;
 @bottom-margin: 60px;
 
 //
