--- a/app/assets/stylesheets/index-logged-in.less
+++ b/app/assets/stylesheets/index-logged-in.less
@@ -1,23 +1,4 @@
-@font-face {
-  font-family: 'Gotham Light';
-  src: url('../fonts/GothamSSm-Light.eot'); 
-  src: url('../fonts/GothamSSm-Light.eot?#iefix') format('embedded-opentype'), 
-       url('../fonts/GothamSSm-Light.woff') format('woff'),
-       url('../fonts/GothamSSm-Light.ttf')  format('truetype');
-}
-@font-face {
-  font-family: 'Gotham';
-  src: url('../fonts/GothamSSm-Medium.eot');
-  src: url('../fonts/GothamSSm-Medium.eot?#iefix') format('embedded-opentype'), 
-       url('../fonts/GothamSSm-Medium.woff') format('woff'),
-       url('../fonts/GothamSSm-Medium.ttf')  format('truetype');
-}
-
-@font-face {
-  font-family: 'Gotham Thin';
-  src: url('../fonts/Gotham-Thin.otf') format('opentype'),
-       url('../fonts/Gotham-Thin.ttf')  format('truetype');
-}
+@import "font";
 
 .navbar {
   font-family: 'Gotham Light';
