--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -1,23 +1,5 @@
-@font-face {
-  font-family: 'Gotham Light';
-  src: url('../fonts/GothamSSm-Light.eot'); /* IE9 Compat Modes */
-  src: url('../fonts/GothamSSm-Light.eot?#iefix') format('embedded-opentype'), 
-       url('../fonts/GothamSSm-Light.woff') format('woff'),
-       url('../fonts/GothamSSm-Light.ttf')  format('truetype');
-}
-@font-face {
-  font-family: 'Gotham';
-  src: url('../fonts/GothamSSm-Medium.eot'); /* IE9 Compat Modes */
-  src: url('../fonts/GothamSSm-Medium.eot?#iefix') format('embedded-opentype'), 
-       url('../fonts/GothamSSm-Medium.woff') format('woff'),
-       url('../fonts/GothamSSm-Medium.ttf')  format('truetype');
-}
+@import "font";
 
-@font-face {
-  font-family: 'Gotham Thin';
-  src: url('../fonts/Gotham-Thin.otf') format('opentype'),
-       url('../fonts/Gotham-Thin.ttf')  format('truetype');
-}
 .main-content {
   font-family: 'Gotham Light';
   padding-top: 20px;
