fixes landing mobile

--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -170,31 +170,6 @@ body, h1, h2, h3, h4, h5, h6 {
   font-size: 2em;
   font-weight: bold;
 }
-@media screen and (max-width: 768px) {
-  .navbar ul.nav li {
-    text-align: center;
-  }
-  .navbar ul.nav li button {
-    margin: 1em 0;
-  }
-  .jumbotron {
-    font-size: 14px;
-  }
-  .benefit {
-    margin-bottom: 2em;
-  }
-}
-@media screen and (max-width: 480px) {
-  body {
-    font-size: 12px;
-  }
-  .jumbotron {
-    font-size: 12px;
-  }
-  footer .pull-right {
-    display: none;
-  }
-}
 
 .btn {
   outline: none;
@@ -297,3 +272,42 @@ footer a:hover {
   top: -4px;
   margin-right: 10px;
 }
+
+@media screen and (max-width: 768px) {
+  .navbar ul.nav li {
+    text-align: center;
+  }
+  .navbar ul.nav li button {
+    margin: 1em 0;
+  }
+  .jumbotron {
+    font-size: 14px;
+  }
+  .benefit {
+    margin-bottom: 2em;
+  }
+  #top h1 {
+    font-size: 20pt;
+  }
+  #button-container a {
+    width: 100%;
+    margin-left: 0;
+  }
+  .brand-logo {
+    top: -15px;
+  }
+}
+@media screen and (max-width: 480px) {
+  body {
+    font-size: 12px;
+  }
+  .jumbotron {
+    font-size: 12px;
+  }
+  footer .pull-right {
+    display: none;
+  }
+
+}
+
+
