renamed dropdown item for clarity

--- a/app/public/graph-nav.jade
+++ b/app/public/graph-nav.jade
@@ -37,7 +37,7 @@ nav.navbar.navbar-default(role='navigation')
                     i.fa.fa-signal.pull-right
                 li 
                   a#settings-button(href="" data-toggle="modal")
-                    span Settings
+                    span Rename Cograph
                     i.fa.fa-cog.pull-right
 
         #gdocs-nav.collapse.navbar-collapse
