renamed edit node modal buttons

--- a/app/templates/edit_form.html
+++ b/app/templates/edit_form.html
@@ -1,9 +1,13 @@
 <form class="form" id="edit-node-form" role="form">
   <div data-fields="name,url,description,image"></div>
   <div class="colorpalette"></div>
-  <button id='save-node-connection-button' class="btn btn-default" type="submit">
-    Save
+  <button id='save-node-connection-button' class="btn btn-success" type="submit">
+    <i class="fa fa-save"></i> Save Changes
   </button>
-  <button id="delete-button" class="btn btn-danger pull-right" type="button">Delete</button>
-  <button id="archive-button" class="btn btn-danger" type="button">Hide</button>
+  <button id="delete-button" class="btn btn-danger pull-right" type="button">
+  	<i class="fa fa-times-circle"></i> Delete
+  </button>
+  <button id="archive-button" class="btn btn-warning" type="button">
+  	<i class="fa-eye-slash fa"></i> Hide
+  </button>
 </form>
