--- a/app/public/graph.jade
+++ b/app/public/graph.jade
@@ -8,6 +8,9 @@ html(lang="en")
     meta(name="description" content="Cograph lets you build and explore graphs together")
     meta(property="fb:app_id" content="315770905267996")
     
+    script(type="text/javascript", src="/assets/libs/jquery/dist/jquery.min.js")
+    script(type="text/javascript", src="/assets/libs/Caret.js/dist/jquery.caret.min.js")
+    script(type="text/javascript", src="/assets/libs/targeted-atwho/dist/js/jquery.atwho.min.js")
     // For Development
     link(href='/assets/stylesheets/main.css', rel='stylesheet')
     script(type='text/javascript', data-main="/main", src="/assets/libs/requirejs/require.js") //loads main.js
