--- a/app/public/graph-content-edit.jade
+++ b/app/public/graph-content-edit.jade
@@ -16,7 +16,7 @@ block content
             #add-toolbar.cf
               #add-toolbar-left
                 button#add-color.color-circle(type="button")
-                  i.fa.fa-circle(title="Change color")
+                  i.fa.fa-paint-brush(title="Change color")
                 div#add-color-container.hidden
                 button#add-image(type="button")
                   i.fa.fa-image(title='Add image')
