new nav, changes to homepage

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -44,10 +44,10 @@ html(lang='en')
 
     #top.jumbotron
       .container
-        h1 Make new connections
+        h1 Discover new connections
         p#button-container
           a#create.btn.btn-primary.btn-lg.call-to-action(href="/request-key") Make a Cograph
-          a#open.btn.btn-default.btn-lg.call-to-action(href="/request-key") Explore Cographs
+          a#open.btn.btn-info.btn-lg.call-to-action(href="/request-key") Explore Cographs
 
     .container.main-content
       .row
