--- a/app/public/profile.jade
+++ b/app/public/profile.jade
@@ -26,6 +26,8 @@ head
         if ownProfile
           h5
             a(href="/new") + create new
+            a(href="/account") account
+            a(href="/logout") logout
           
       if ownProfile
         .row
