--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -204,11 +204,11 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 
 .call-to-action, .jumbotron .btn {
-  margin: 0 10px;
-  font-size: 16px;
-  text-transform: uppercase;
-  font-weight: 200;
-  background: rgba(0,0,0,0.4);
+  // margin: 0 10px;
+  // font-size: 16px;
+  // text-transform: uppercase;
+  // font-weight: 200;
+  // background: rgba(0,0,0,0.4);
   border: 0;
   border-radius: 0px;
   padding: 20px 60px;
