--- a/app/public/graph-nav.jade
+++ b/app/public/graph-nav.jade
@@ -49,20 +49,24 @@ nav.navbar.navbar-default(role='navigation')
             if isOwner
               li#maybe-publish-button
             if isAuthenticated
-              li#newgraph-icon
-                a(href="/new" target="_blank" title="new graph")
-                  img(src="/assets/images/newgraph.png")
-              li.dropdown
-                a.dropdown-toggle(data-toggle='dropdown', href='')
-                  | @#{user.local.name}
-                  i.caret
-                ul.dropdown-menu
-                  li(role="presentation")
-                    a(href="/#{user.local.name}") My Cographs
-                  li(role="presentation")
-                    a(href="/account") Account
-                  li
-                    a(href="/logout") Logout
+              li
+                a(href="/") Explore
+              li
+                a(href="/#{user.local.nameLower}") @#{user.local.name}
+              //- li#newgraph-icon
+              //-   a(href="/new" target="_blank" title="new graph")
+              //-     img(src="/assets/images/newgraph.png")
+              //- li.dropdown
+              //-   a.dropdown-toggle(data-toggle='dropdown', href='')
+              //-     | @#{user.local.name}
+              //-     i.caret
+              //-   ul.dropdown-menu
+              //-     li(role="presentation")
+              //-       a(href="/#{user.local.name}") My Cographs
+              //-     li(role="presentation")
+              //-       a(href="/account") Account
+              //-     li
+              //-       a(href="/logout") Logout
             else
               li
                 a(href="/login") Login
