--- a/app/public/profile.jade
+++ b/app/public/profile.jade
@@ -24,8 +24,8 @@ head
           else
             | @#{user.local.name}
         if ownProfile
-          h5
-            a(href="/new") + create new
+          h5#user-nav-actions
+            a(href="/new") new cograph
             a(href="/account") account
             a(href="/logout") logout
           
