fixed bottom bar, removed showall/hideall

--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -734,11 +734,25 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
     display: none;
   }
 
+  #toolbar-bottom-right button img {
+    // make toolbar icons smaller
+    padding-right: 20px;
+  }
+  #toolbar-bottom-right button {
+    width: 45px;
+    padding-left: 15px;
+  }
+
+  #search-form {
+    width: 100px;
+  }
+
   #menu-title {
     width: 90px;
   }
 
   #trash-bin {
+    display: none;
     height: 50px;
     border-width: 1px;
     padding: 5px;
