background no longer transparent

--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -423,6 +423,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 #search-form {
   margin-right: 10px;
+  background: white;
 }
 
 .modal-body {
