--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -424,6 +424,11 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 #search-form {
   margin-right: 10px;
   background: white;
+
+  .tt-dropdown-menu {
+    max-height: 300px;
+    overflow-y: scroll;
+  }
 }
 
 .modal-body {
